@@ -78,6 +78,8 @@ public:
 
 	virtual IMesh* createMeshUniquePrimitives(IMesh* mesh) const;
 
+	virtual IMesh* createMeshWelded(IMesh *mesh, f32 tolerance=core::ROUNDING_ERROR_32) const;
+
 	//! Returns amount of polygons in mesh.
 	virtual s32 getPolyCount(scene::IMesh* mesh) const;
 
